--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	@apply font-rubik;
+}
+
 ::-webkit-scrollbar-track
 {
 	@apply bg-gray-50;
@@ -14,5 +18,5 @@
 
 ::-webkit-scrollbar-thumb
 {
-	@apply bg-gray-400 rounded;
+	@apply bg-black;
 }
